<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools">

<data>

    <import type="androidx.databinding.ObservableField" />

    <import type="com.example.wombatapp.addmeasurement.ECGFragment" />

    <import type="android.view.View" />

    <variable
        name="content"
        type="com.example.wombatapp.minttihealth.health.MeasureFragment2" />

    <variable
        name="showUpload"
        type="androidx.databinding.ObservableBoolean" />

    <variable
        name="model"
        type="com.example.wombatapp.minttihealth.health.bean.ECG" />

    <variable
        name="pagerSpeedStr"
        type="ObservableField&lt;String&gt;" />

    <variable
        name="gainStr"
        type="ObservableField&lt;String&gt;" />

</data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.wombatapp.addmeasurement.ECGFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@color/colorPrimary"
                android:clickable="true"
                android:focusable="true">
<!--                android:onClick="@{((ECGFragment)content)::openECGLarge}"-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/click_here_to_see_the_full_ecg"
                    android:textColor="#50FF4081"
                    android:textSize="32sp" />

                <com.example.wombatapp.minttihealth.health.wave.EcgBackgroundView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.example.wombatapp.minttihealth.health.WaveSurfaceView
                    android:id="@+id/wave_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:scrollable="false"
                    tools:ignore="MissingClass" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingTop="8dp"
                android:paddingRight="12dp"
                android:text="@string/ecg_settings" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{((ECGFragment)content)::clickSetPagerSpeed}"
                    android:text="@{String.format(@string/pager_speed_value, pagerSpeedStr)}"
                    android:textAllCaps="false"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{((ECGFragment)content)::clickSetGain}"
                    android:text="@{String.format(@string/gain_value, gainStr)}"
                    android:textAllCaps="false"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <Switch
                android:id="@+id/sw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ecg_auto_end"
                android:padding="16dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingTop="8dp"
                android:paddingRight="12dp"
                android:text="@{String.format(@string/duration_value, model.duration)}"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingTop="8dp"
                android:paddingRight="12dp"
                android:text="@{String.format(@string/rr_max_value, model.RRMax)}"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingTop="8dp"
                android:paddingRight="12dp"
                android:text="@{String.format(@string/rr_min_value, model.RRMin)}"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingTop="8dp"
                android:paddingRight="12dp"
                android:text="@{String.format(@string/hr_value, model.hr)}"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingTop="8dp"
                android:paddingRight="12dp"
                android:text="@{String.format(@string/hrv_value, model.hrv)}"
                android:textSize="14sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingTop="8dp"
                android:paddingRight="12dp"
                android:text="@{String.format(@string/mood_value, model.mood)}"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingTop="8dp"
                android:paddingRight="12dp"
                android:text="@{String.format(@string/rr_value, model.rr)}"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_measure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{content::clickMeasure}"
        android:text="@string/measure_now"
        android:textAllCaps="false"
        android:textSize="12sp" />

</LinearLayout>


</layout>
